src/main/resources/config/plugtify-back-end-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plugtify-back-end
  labels:
    app: plugtify-back-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plugtify-back-end
  template:
    metadata:
      labels:
        app: plugtify-back-end
    spec:
      containers:
        - image: gcr.io/plugtify/plugtify-back-end:v22
          name: plugtify-back-end
          ports:
            - containerPort: 9090
              name: plugtify-be
