src/main/resources/config/plugtify-back-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plugtify-back-end
  labels:
    app: plugtify-back-end
spec:
  type: ClusterIP
  ports:
    - port: 9090
  selector:
    app: plugtify-back-end
