src/main/resources/config/plugtify-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plugtify-nodeport-service
spec:
  type: NodePort
  selector:
    app: plugtify-front-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
