src/main/resources/config/plugtify-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: plugtify-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip: 34.98.125.60
    networking.gke.io/managed-certificates: plugtify-certificacte
spec:
  backend:
    serviceName: plugtify-nodeport-service
    servicePort: 80
